src/parser/parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. parser.java */
package parser;

import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.FileWriter;
import java.io.IOException;
import java.util.Iterator;
import util.*;
import list.*;

public class parser/*@bgen(jjtree)*/implements parserTreeConstants, parserConstants {/*@bgen(jjtree)*/
  protected JJTparserState jjtree = new JJTparserState();public QTList qtList = new QTList();
  public NodeList nodeList = new NodeList();
  public static String s = "";
  public static int errorNum = 0;

  //测试
  public static void main(String args [])throws FileNotFoundException
  {
//    parser parser = new parser(new FileInputStream("code.c"));
//    parser.analyzer("code.c");
//    System.out.println("Reading from file src/test.c :");
//    File file = null;
//    InputStream in = null;
//    file = new File("src/test.c");
//    try {
//		in = new FileInputStream(file);
//	} catch (FileNotFoundException e1) {
//		// TODO 自动生成的 catch 块
//		e1.printStackTrace();
//	}
//    parser parser = new parser(in);
//    try
//    {
//      SimpleNode n = parser.Start();
//      n.dump("");
//      qtList.printQTTable();
//      //System.out.println("finished success!");
//    }
//    catch (Exception e)
//    {
//      System.out.println("Oops.");
//      System.out.println(e.getMessage());
//    }
  }

  public int analyzer(String fileName)
  {
    s = "";
    errorNum = 0;
        yuyi(fileName);
//	System.out.println(s);
    try {
            FileWriter fw = new FileWriter("analyzer.txt");
            fw.write(s);
            fw.close();
    } catch (Exception e) {
            // TODO 自动生成的 catch 块
            e.printStackTrace();
    }
    return errorNum;
  }

  public void cifa(String fileName)
  {
    SimpleCharStream input = null;
    FileWriter fw = null;
    FileReader fr = null;
    try {
        fw = new FileWriter("cifa.txt");
        fr = new FileReader(fileName);
            input = new SimpleCharStream(fr);
        } catch (IOException e1) {
                // TODO 自动生成的 catch 块
                e1.printStackTrace();
        }
        parserTokenManager man = new parserTokenManager(input);
        Token tk = man.getNextToken();
        while(tk.kind != 0) {
          try {
                        fw.write(tk.kind + " " + tk.image + "\u005cn");
          } catch (IOException e) {
                        // TODO 自动生成的 catch 块
                        e.printStackTrace();
          }
          tk = man.getNextToken();
        }
        try {
          fr.close();
          fw.close();
        }catch(IOException e) {
          // TODO 自动生成的 catch 块
          e.printStackTrace();
        }
  }

  public void yufa(String fileName)
  {
    FileWriter fw = null;
    FileInputStream in = null;
    try {
        fw = new FileWriter("yufa.txt");
        in = new FileInputStream(fileName);
        } catch (IOException e1) {
                // TODO 自动生成的 catch 块
                e1.printStackTrace();
        }
        parser parser = new parser(in);
        try {
          SimpleNode n = parser.Start();
          printNode(n, "",  fw);
        }catch(Exception e) {
          System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
    try {
          fw.close();
          in.close();
        }catch(IOException e) {
          // TODO 自动生成的 catch 块
          e.printStackTrace();
        }
  }

  public void printNode(SimpleNode n, String prefix, FileWriter fw)
  {
    try {
      fw.write(prefix + n.toString() + "\u005cn");
      Node[] children = n.children;
      if (children != null) {
        for (int i = 0; i < children.length; i++) {
          SimpleNode n1 = (SimpleNode)children[i];
          if (n1 != null) {
            printNode(n1, prefix+" ", fw);
          }
        }
      }
    }catch(IOException e1) {
      e1.printStackTrace();
    }
  }

  public void yuyi(String fileName)
  {
    FileWriter fw = null;
    FileInputStream in = null;
    try {
      fw = new FileWriter("yuyi.txt");
      in = new FileInputStream(fileName);
    } catch (IOException e1) {
                // TODO 自动生成的 catch 块
                e1.printStackTrace();
        }
        parser parser = new parser(in);
        try {
          parser.Start();
          parser.printQTList(fw);
        }catch(Exception e) {
          System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
    try {
          fw.close();
          in.close();
        }catch(IOException e) {
          // TODO 自动生成的 catch 块
          e.printStackTrace();
        }
  }

  public void printQTList(FileWriter fw)
  {
    qtList.printQTTable(fw);
  }

  final public SimpleNode Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Program();
      jj_consume_token(0);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/* 处理程序 */
  final public void Program() throws ParseException {
                /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LP);
      jj_consume_token(RP);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LB:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        StatementBlock();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public String type() throws ParseException {
                /*@bgen(jjtree) type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tk = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        tk = jj_consume_token(INT);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 {if (true) return tk.image;}
        break;
      case FLOAT:
        tk = jj_consume_token(FLOAT);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                     {if (true) return tk.image;}
        break;
      case CHAR:
        tk = jj_consume_token(CHAR);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                    {if (true) return tk.image;}
        break;
      case DOUBLE:
        tk = jj_consume_token(DOUBLE);
                      {if (true) return tk.image;}
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return null;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/* 处理语句块 */
  final public void StatementBlock() throws ParseException {
                       /*@bgen(jjtree) StatementBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LB);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case FLOAT:
        case CHAR:
        case DOUBLE:
        case IF:
        case WHILE:
        case DO:
        case SWITCH:
        case FOR:
        case ZIZENG:
        case ZIJIAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        statement();
      }
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* 处理语句 */
  final public void statement() throws ParseException {
                  /*@bgen(jjtree) statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case DOUBLE:
        seqStatement();
        jj_consume_token(59);
        break;
      case ZIZENG:
      case ZIJIAN:
      case IDENTIFIER:
        decStatement();
        jj_consume_token(59);
        break;
      case IF:
      case SWITCH:
        cdlStatement();
        break;
      case WHILE:
      case DO:
      case FOR:
        loopStatement();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* 处理声明语句 */
  final public void seqStatement() throws ParseException {
                     /*@bgen(jjtree) seqStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTSEQSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String name, type1;
  Node1 n;
    try {
      type1 = type();
      name = Identifier();
    // 变量名重复声明处理
    if (nodeList.isExist(name)) {
//      System.out.println("变量" + type1 + ":" + name + "已存在，不能重复声明！");
      s += "\u53d8\u91cf" + type1 + ":" + name + "\u5df2\u5b58\u5728\uff0c\u4e0d\u80fd\u91cd\u590d\u58f0\u660e\uff01\u005cn";
//      out.write("变量" + type1 + ":" + name + "已存在，不能重复声明！" + "\n");
      errorNum++;
    }else {
      n = new Node1(name, type1);
      nodeList.addNode(n);
    }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
      n = null;
      name = null;
        jj_consume_token(COMMA);
        name = Identifier();
      if (nodeList.isExist(name)) {
        s += "\u53d8\u91cf" + type1 + ":" + name + "\u5df2\u5b58\u5728\uff0c\u4e0d\u80fd\u91cd\u590d\u58f0\u660e\uff01\u005cn";
//      System.out.println("变量" + type1 + ":" + name + "已存在，不能重复声明！");
//      out.write("变量" + type1 + ":" + name + "已存在，不能重复声明！" + "\n");
        errorNum++;
      }else {
        n = new Node1(name, type1);
        nodeList.addNode(n);
      }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* 处理赋值语句 */
  final public void decStatement() throws ParseException {
                      /*@bgen(jjtree) decStatement */
  SimpleNode jjtn000 = new SimpleNode(JJTDECSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String first, result = null;
  int D = 0;
  Token tk;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        result = Identifier();
      if (!nodeList.isExist(result)) {
        s += "\u53d8\u91cf " + result + " undefined\uff01\u005cn";
//        System.out.println("变量 " + result + " undefined！");
//        out.write("变量 " + result + " undefined！" + "\n");
        errorNum++;
      }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ZIZENG:
          jj_consume_token(ZIZENG);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   qtList.addQTInfo(new QTInfo("+", result, "1", result));
          break;
        case ZIJIAN:
          jj_consume_token(ZIJIAN);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   qtList.addQTInfo(new QTInfo("-", result, "1", result));
          break;
        case EQUAL:
          tk = jj_consume_token(EQUAL);
          first = Expression();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          QTInfo qt = new QTInfo(tk.image, first, "_", result);
          qtList.addQTInfo(qt);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case ZIZENG:
        jj_consume_token(ZIZENG);
        result = Identifier();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      qtList.addQTInfo(new QTInfo("+", result, "1", result));
      if (!nodeList.isExist(result)) {
        s += "\u53d8\u91cf " + result + " undefined\uff01\u005cn";
        errorNum++;
      }
        break;
      case ZIJIAN:
        jj_consume_token(ZIJIAN);
        Identifier();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      qtList.addQTInfo(new QTInfo("-", result, "1", result));
      if (!nodeList.isExist(result)) {
        s += "\u53d8\u91cf " + result + " undefined\uff01\u005cn";
        errorNum++;
      }
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
